--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 /* Centra la informacion */
-.titulo, .foto-principal, .vistas {
+.titulo, .foto-principal, .vistas, .perros1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,6 +22,10 @@ h1 {
     width: 350px;
 }
 
+.perro2 {
+    width: 55%;
+    margin-bottom: 10px;
+}
 /* Gatitos */
 .gato {
     margin-left: 20px;
